# curl-impersonate-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-07-22-custom-tls-profiles.md
docs/superpowers/specs/: 2026-07-22-custom-tls-profiles-design.md
examples/: custom_fingerprint.rs  download_and_get.rs  get.rs  post.rs
src/: download.rs  fingerprint.rs  lib.rs
