[package]
name = "curl-impersonate-cli"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Async subprocess wrapper around the curl-impersonate CLI — byte-exact browser TLS/HTTP2 fingerprints via the curl_chromeNNN binaries, with a safe builder API."
license = "MIT"
readme = "README.md"
keywords = ["curl", "impersonate", "tls", "fingerprint", "http"]
categories = ["web-programming::http-client", "network-programming"]
authors = ["Rin"]
repository = "https://github.com/TurtIeSocks/curl-impersonate-cli"
homepage   = "https://github.com/TurtIeSocks/curl-impersonate-cli"

[lib]
name = "curl_impersonate_cli"
path = "src/lib.rs"

[features]
default = []
# Opt-in runtime download of a prebuilt curl-impersonate release into a cache
# dir (Linux/macOS). Pulls in an HTTP client + tar/gzip extraction.
download = ["dep:reqwest", "dep:flate2", "dep:tar", "dep:dirs", "tokio/fs"]
# Build the `curl-impersonate-mcp` stdio MCP server binary, exposing the request
# API as tools for LLM agents. Pulls in the rmcp SDK; enables `download` so the
# server can fetch a wrapper on first use. Off the default (library) build.
mcp = ["download", "dep:rmcp", "dep:serde", "tokio/rt-multi-thread", "tokio/macros"]
# Opt-in JSON capture parsing: `Fingerprint::from_capture_json`. Pulls serde +
# serde_json; off the default build.
json = ["dep:serde", "dep:serde_json"]

[dependencies]
tokio     = { version = "1", features = ["process", "io-util", "rt"] }
thiserror = "2"

# `download` feature only — kept out of the default build.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
flate2  = { version = "1", optional = true }
tar     = { version = "0.4", optional = true }
dirs    = { version = "6", optional = true }

# `mcp` feature only. rmcp re-exports `schemars`, so we derive tool schemas via
# `rmcp::schemars` and don't depend on it directly.
rmcp  = { version = "2", features = ["server", "macros", "transport-io"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

# `json` feature only.
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Only builds with the `download` feature (uses the download module).
[[example]]
name = "download_and_get"
required-features = ["download"]

# Only builds with the `json` feature (uses `Fingerprint::from_capture_json`).
[[example]]
name = "custom_fingerprint"
required-features = ["json"]

# The MCP server binary. Only builds with the `mcp` feature, keeping rmcp and its
# transitive deps out of the default library build.
[[bin]]
name = "curl-impersonate-mcp"
path = "src/bin/mcp.rs"
required-features = ["mcp"]

[package.metadata.docs.rs]
# Build docs with the download + json features so their APIs are documented.
# Not `all-features`: the `mcp` feature only adds a binary (rmcp SDK), nothing
# the library docs need, so keep it out of the docs build.
features = ["download", "json"]
